added star rating directive and styling

--- a/app/styles.css
+++ b/app/styles.css
@@ -1,3 +1,4 @@
+
 h1, h2 {
   text-align: center;
   margin: auto;
@@ -6,7 +7,7 @@ h1, h2 {
 
 #addBox {
   width: 280px;
-  padding: 20px 10px;
+  padding: 35px 10px;
   border: 2px solid #000;
   border-radius: 6px;
   display: inline-block;
@@ -20,6 +21,7 @@ h1, h2 {
     clear: left;
     width: 250px;
     text-align: left;
+    margin: 10px 0px;
 }
 
 #addBox input, #updateRest input {
@@ -40,7 +42,7 @@ h1, h2 {
     display: inline-block;
     float: left;
     clear: left;
-    width: 195px;
+    width: 145px;
     text-align: left;
 }
 
@@ -51,13 +53,14 @@ h1, h2 {
 }
 
 #updateRest {
-  width: 200px;
-  padding: 55px 10px 0px;
+  width: 154px;
+  padding: 0px 0px 0px;
   border-radius: 6px;
   display: inline-block;
   padding-right: 0;
   background-color: #ddd;
-  margin-bottom: 25px;
+  margin-top: 19px;
+  margin-bottom: 0px;
 }
 
 #updateRest button {
@@ -67,14 +70,25 @@ h1, h2 {
 
 #restHolder {
   display: inline-block;
-  float:left;
-  width: 70%;
+  float:right;
+  width: 1012px;
+  margin-right: 80px;
+  border: 3px solid black;
+  border-radius: 6px;
 }
 
 #restList {
   max-width: 75%;
   display: inline-block;
-  margin-left: 50px;
+  padding: 24px;
+}
+
+#restList:nth-child(even) {
+  background-color: #EEEEEE;
+}
+
+#restList:nth-child(odd) {
+  background-color: #DFDFDF;
 }
 
 #restList h3 {
@@ -83,6 +97,13 @@ h1, h2 {
 
 #restList button {
   margin-bottom: 10px;
+}
+
+.rating span {
+  color: gray;
+}
+.rating span.filled {
+  color: gold;
 }
 
 
